--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
 
 <!--content starts-->
-<div class="container-fluid">
+<div class="container-fluid" style="text-align: center;">
   <span class="title">RedMoon</span></br>
   <span style="font-size: 18px; font-weight: bold">Noodle House</span></br>
   <p class="intro"><i>Welcome to our unique blend of Chinese-Japanese Cuisine</i></p> 
-	
 </div>
+
 <a name="starter"></a>
 <section class="row">
 <div class="row">
@@ -59,10 +59,9 @@
   <b>4. Crispy Shrimp Roll (4)</b> $6.25<br />
   <b>5. Chinese Buffalo Wing (6)*</b> $6.45<br />
   <b>6. Juicy Dumpling (6) (Xiaolongbao)</b> $6.45</p><br />
-</div>
+
 <a name="beef"></a>
-<div class="row">
-  <h2 class="sectiontitle">Beef, Pork & Chicken</h2>
+<h2 class="sectiontitle">Beef, Pork & Chicken</h2>
   <p><b>7. Ginger Flavor Fried Chicken</b> $9.75<br />
   <b>8. Ginger Pork (4)</b> $9.75<br />
   <b>9. Sweet & Sour Pork</b> $9.75<br />
@@ -72,11 +71,9 @@
   <b>13. Green Pepper Shredded Beef</b> $9.75<br />
   <b>14. Chicken or Beef with Fresh Baby Bok Choy (option)</b> $9.75<br />
   <b>15. Chicken with Green Bean</b>$9.75</p>
-</div>
-</section>
+
 <a name="veg"></a>
-<section class="row">
-<div class="row">
+
  <h2 class="sectiontitle">Vegetarian</h2>
   <p><b>16. Tofu Skin</b> $9.95<br />
   <b>17. Braised Green Bean</b> $8.75<br />
@@ -84,8 +81,7 @@
   <b>19. Hot & Spicy Japanese Egg Plant*</b> $8.75<br />
   <b>20. Mixed Vegetables</b> $8.75<br />
    <a name="special"></a>
- <section class="row">
-<div class="row">
+ 
  <h2 class="sectiontitle">Specialties</h2>
   <b>21. Salt & Pepper Shrimp*</b> $12.25<br />
   <b>22. Seafood Clay Pot</b> $12.95<br />
@@ -109,13 +105,11 @@
   <b>33. Black Pepper Beef</b> $9.75<br />
 
   <b>34. Sweet & Pungent Chicken</b> $9.75<br />
- </div>
- </section>
+ 
  
 
  <a name="noodles"></a>
-<section class="row">
-<div class="row">
+
  <h2 class="sectiontitle">Noodles and Rice</h2>
  <b>35. Ramen Noodles</b><br />
   <ul><li><b>Soy Sauce Flavor</b> $7.75</li>
