--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+ <link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 	
 </head>
 <body>
@@ -30,8 +30,8 @@
         <li><a href="#starter">Starter</a></li>
         <li><a href="#beef">Beef/Pork/Chicken</a></li>
         <li><a href="#veg">Vegetarian Entrees</a></li>
-        <li><a href="#noodles">Noodles/Rice</a></li>
         <li><a href="#special">Specialties</a></li>
+        <li><a href="#noodles">Noodles/Rice</a></li>
       </ul>
         <!--<ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
@@ -45,95 +45,107 @@
 <!--content starts-->
 <div class="container-fluid" style="text-align: center;">
   <span class="title">RedMoon</span></br>
-  <span style="font-size: 18px; font-weight: bold">Noodle House</span></br>
-  <p class="intro"><i>Welcome to our unique blend of Chinese-Japanese Cuisine</i></p> 
+  <span style="font-size: 36px; font-weight: bold">Noodle House</span></br>
+  <p class="intro">Welcome to our unique blend of Chinese-Japanese Cuisine</p> 
+	
 </div>
-
-<a name="starter"></a>
-<section class="row">
 <div class="row">
+<a name="starter"></a>
+<p><i>We specialize in catering event from small parties to business events. For Additional details call Victor (619)-370-8688.</i><br /><b>4646 Convoy St. #114 San Diego CA 92111 858-576-7466</b></p>
+</div>
+<div class="row">
+  <a name="starter"></a>
   <h2 class="sectiontitle">Starters</h2>
   <p><b>1. Vegetables Egg Roll (2)</b> $2.95<br />
   <b>2. Cream CheeseWonton (4)</b> $3.75<br />
   <b>3. Edamame</b> $3.50<br />
   <b>4. Crispy Shrimp Roll (4)</b> $6.25<br />
   <b>5. Chinese Buffalo Wing (6)*</b> $6.45<br />
-  <b>6. Juicy Dumpling (6) (Xiaolongbao)</b> $6.45</p><br />
-
-<a name="beef"></a>
-<h2 class="sectiontitle">Beef, Pork & Chicken</h2>
+  <a name="beef"></a>
+  <b>6. Juicy Dumpling (6) (Xiaolongbao)</b> $6.45</p>
+</div>
+<div class="row">
+  <h2 class="sectiontitle">Beef, Pork & Chicken</h2>
   <p><b>7. Ginger Flavor Fried Chicken</b> $9.75<br />
-  <b>8. Ginger Pork (4)</b> $9.75<br />
+  <b>8. Ginger Pork</b> $9.75<br />
   <b>9. Sweet & Sour Pork</b> $9.75<br />
   <b>10. Mongolian Beef</b> $9.75<br />
   <b>11. Kon Pao Chicken or Beef (option for both)*</b> $9.75<br />
   <b>12. Broccoli Chicken or Beef (option for both)</b> $9.75<br />
   <b>13. Green Pepper Shredded Beef</b> $9.75<br />
   <b>14. Chicken or Beef with Fresh Baby Bok Choy (option)</b> $9.75<br />
-  <b>15. Chicken with Green Bean</b>$9.75</p>
-
-<a name="veg"></a>
-
+  <a name="veg"></a>
+  <b>15. Chicken with Green Bean</b> $9.75</p>
+</div>
+<div class="row">
  <h2 class="sectiontitle">Vegetarian</h2>
   <p><b>16. Tofu Skin</b> $9.95<br />
   <b>17. Braised Green Bean</b> $8.75<br />
   <b>18. Szechwan Bean Curd (Tofu with Spicy Brown Sauce)*</b> $8.75<br />
   <b>19. Hot & Spicy Japanese Egg Plant*</b> $8.75<br />
-  <b>20. Mixed Vegetables</b> $8.75<br />
-   <a name="special"></a>
- 
- <h2 class="sectiontitle">Specialties</h2>
-  <b>21. Salt & Pepper Shrimp*</b> $12.25<br />
-  <b>22. Seafood Clay Pot</b> $12.95<br />
+  <a name="special"></a>
+  <b>20. Mixed Vegetables</b> $8.75</p>
+  </div>
+<div class="row">
+ <h2 class="sectiontitle">Specialties (*spicy)</h2>
+  <p><b>21. Salt & Pepper Shrimp*</b> $12.25 
+  <span class="sm">Deep fried crispy, sauteed with fresh jalapeno and green onion</span><br />
+  <b>22. Seafood Clay Pot</b> $12.95 
+    <span class="sm">Shrimp,fish filet,and calamari with assorted vegetables in an oyster sauce</span><br />
   <b>23. Kon Pao San Yan*</b> $12.25<br />
-  <b>24. Honey Walnuts Shrimp</b> $12.25<br />
-  <b>25. Red Moon Chicken</b> $9.75<br />
-
-  <b>26. Red Moon Beef</b> $9.95<br />
-
-  <b>27. Crispy Garlic Chicken</b> $9.75<br />
-
-  <b>28. Thai Spicy Chicken</b> $9.75<br />
-
-  <b>29. Salt & Pepper Pork Chop</b> $9.75<br />
-
-  <b>30. Spicy Beef</b> $9.75<br />
-  <b>31. Sweet & Pungent Shrimp</b> $12.25<br />
-
-  <b>32. Pan Fried Fish Filet or Steam Fish Filet</b> $13.45<br />
-
-  <b>33. Black Pepper Beef</b> $9.75<br />
-
-  <b>34. Sweet & Pungent Chicken</b> $9.75<br />
- 
- 
-
+  <span class="sm">Shrimp, white meat chicken and beef in a spicy sauce with peanuts</span><br />
+  <b>24. Honey Walnuts Shrimp</b> $12.25 
+  <span class="sm">Tender shrimp fried in a light battet sauteed in a creamy seafood sauce and crunchy honey walnuts</span><br />
+  <b>25. Red Moon Chicken*</b> $9.75 
+  <span class="sm">Slices of white meat chicken sauteed with vegetables in a spicy brown sauce</span><br />
+  <b>26. Red Moon Beef*</b> $9.95 
+   <span class="sm">Slices of crispy beef sauteed with tangerine peel in the chef's special sauce</span><br /><br />
+  <b>27. Crispy Garlic Chicken*</b> $9.75 
+  <span class="sm">White meat chicken fried in a light batter served
+with assorted vegetables in a spicy garlic sauce</span><br />
+  <b>28. Thai Spicy Chicken*</b> $9.75
+  <span class="sm">White meat chicken in a spicy sauce with fresh basil</span><br />
+  <b>29. Salt & Pepper Pork Chop*</b> $9.75
+  <span class="sm">Deep fried crispy, sauteed with fresh jalapeno and green onion</span><br />
+  <b>30. Spicy Beef*</b> $9.75 
+  <span class="sm">Slices of tender beef assorted vegetables saut6ed in a spicy sauce</span><br />
+  <b>31. Sweet & Pungent Shrimp*</b> $12.25 
+  <span class="sm">Tender shrimp fried in a light batter, sauteed in sweet & pungent sauce</span><br />
+  <b>32. Pan Fried Fish Filet or Steam Fish Filet</b> $13.45 
+  <span class="sm">Ginger and onion sauce</span><br />
+  <b>33. Black Pepper Beef*</b> $9.75 
+  <span class="sm">SIices of tender beef with assorted vegetables, sauteed with chef's special black pepper sauce</span><br />
  <a name="noodles"></a>
-
+  <b>34. Sweet & Pungent Chicken*</b> $9.75 
+<span class="sm">Slices of tender chicken breasts fried in a light batter, sauteed in sweet & pungent sauce</span><br /></p>
+ </div>
+ </section>
+ <div class="row">
  <h2 class="sectiontitle">Noodles and Rice</h2>
- <b>35. Ramen Noodles</b><br />
+ <p><b>35. Ramen Noodles</b><br />
   <ul><li><b>Soy Sauce Flavor</b> $7.75</li>
     <li><b>Miso Flavor</b> $7.75</li>
     <li><b>Ground Pork Ramen</b> $7.75</li></ul>
-  <b>36. Tantan Noodles</b> $7.95<br />
-  <b>37. Mandarin Style Meat Sauce Noodle</b> $7.95<br />
-  <b>38. Champon Soup Noodles</b> $7.95<br />
+  <b>36. Tantan Noodles*</b> $7.95
+  <span class="sm">(Spicy sesame flavor, in a ground pork meat sauce)</span><br />
+  <b>37. Mandarin Style Meat Sauce Noodle</b> $7.95 
+  <span class="sm">(Ground pork meat sauce noodle)</span><br />
+  <b>38. Champon Soup Noodles*</b> $7.95 
+  <span class="sm">(Assorted chef's special noodles soup)</span><br />
   <b>39. Assorted or Shrimp Pan Fried Noodles</b> $9.25<br />
   <b>40. Chicken or Beef Pan Fried Noodle</b> $9.25<br />
   <b>41. Assorted or Shrimp Chao Men</b> $9.25<br />
   <p><b>42. Assorted Soup Noodles</b> $9.25<br />
-  <b>43. Singapore Style Noodles (4)</b> $9.25<br />
+  <b>43. Singapore Style Noodles (4)</b> $9.25 
+  <span class="sm">(Rice thin noodle in a curry flavor sauce)</span><br />
   <b>44. Yakisoba Stir Fried Noodles with Vegetable in Yakisoba Sauce<br />
     <ul><li>Assorted or Shrimp- $9.25</li>
         <li>Chicken or Beef- $8.95</li>
         <li>Vegetable Yakisoba, or Vegetable Noodles- $8.50</b></li></ul>
-
   <b>45. House Fried Rice or Shrimp Fried Rice</b> $9.25<br />
   <b>46. Chicken or Beef Fried Rice</b> $8.95<br />
-  <b>47. Rice Cake with Pork</b> $9.25<br />
-  
- </div>
- </section>
+  <b>47. Rice Cake with Pork</b> $9.25</p>
+</div>
 
 </body>
 </html>
