--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <li><a href="#special">Specialties</a></li>
         <li><a href="#noodles">Noodles/Rice</a></li>
       </ul>
-        <!--<ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-          <li><a href="#"><span class="fa fa-tumblr"></span></a>  </li>
-        </ul>-->
+    
     </div>
   </div>
 </nav>
@@ -52,6 +49,15 @@
 <div class="row">
 <a name="starter"></a>
 <p><i>We specialize in catering event from small parties to business events. For Additional details call Victor (619)-370-8688.</i><br /><b>4646 Convoy St. #114 San Diego CA 92111 858-576-7466</b></p>
+<hr>
+<h2 class="sectiontitle">Combination Plate</h2>
+<p>Add $2.50 per entree served with egg roll, cream cheese wonton and miso soup or egg drop soup.</p>
+<h2 class="sectiontitle">Side Order</h2>
+<p><b>Steamed Rice</b> $1.00<br />
+<b>Miso Soup</b> Cup:$1.95 Bowl: $6.95<br />
+<b>Egg Drop Soup</b> Cup: $1.95 Bowl:$6.95<br />
+<b>Hot and Sour Soup</b> $7.95</p>
+<hr>
 </div>
 <div class="row">
   <a name="starter"></a>
