--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	
 </div>
 <div class="row">
+<a name="starter"></a>
 <p><i>We specialize in catering event from small parties to business events. For Additional details call Victor (619)-370-8688.</i><br /><b>4646 Convoy St. #114 San Diego CA 92111 858-576-7466</b></p>
 <hr>
 <h2 class="sectiontitle">Combination Plate</h2>
@@ -55,11 +56,11 @@
 <p><b>Steamed Rice</b> $1.00<br />
 <b>Miso Soup</b> Cup:$1.95 Bowl: $6.95<br />
 <b>Egg Drop Soup</b> Cup: $1.95 Bowl:$6.95<br />
-<a name="starter"></a>
 <b>Hot and Sour Soup</b> $7.95</p>
 <hr>
 </div>
 <div class="row">
+  <a name="starter"></a>
   <h2 class="sectiontitle">Starters</h2>
   <p><b>1. Vegetables Egg Roll (2)</b> $2.95<br />
   <b>2. Cream CheeseWonton (4)</b> $3.75<br />
@@ -143,10 +144,10 @@ with assorted vegetables in a spicy garlic sauce</span><br />
   <p><b>42. Assorted Soup Noodles</b> $9.25<br />
   <b>43. Singapore Style Noodles (4)</b> $9.25 
   <span class="sm">(Rice thin noodle in a curry flavor sauce)</span><br />
-  <b>44. Yakisoba Stir Fried Noodles with Vegetable in Yakisoba Sauce<br />
-    <ul><li>Assorted or Shrimp- $9.25</li>
-        <li>Chicken or Beef- $8.95</li>
-        <li>Vegetable Yakisoba, or Vegetable Noodles- $8.50</b></li></ul>
+  <b>44. Yakisoba Stir Fried Noodles with Vegetable in Yakisoba Sauce</b><br />
+    <ul><li><b>Assorted or Shrimp</b>- $9.25</li>
+        <li><b>Chicken or Beef</b>- $8.95</li>
+        <li><b>Vegetable Yakisoba, or Vegetable Noodles</b>- $8.50</b></li></ul>
   <b>45. House Fried Rice or Shrimp Fried Rice</b> $9.25<br />
   <b>46. Chicken or Beef Fried Rice</b> $8.95<br />
   <b>47. Rice Cake with Pork</b> $9.25</p>
