--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ with assorted vegetables in a spicy garlic sauce</span><br />
  <div class="row">
  <h2 class="sectiontitle">Noodles and Rice</h2>
  <p><b>35. Ramen Noodles</b><br />
-  <ul><li><b>Soy Sauce Flavor</b> $7.75</li>
-    <li><b>Miso Flavor</b> $7.75</li>
-    <li><b>Ground Pork Ramen</b> $7.75</li></ul>
-  <b>36. Tantan Noodles*</b> $7.95
+  <ul><li><p><b>Soy Sauce Flavor</b> $7.75</p></li>
+    <li><p><b>Miso Flavor</b> $7.75</p></li>
+    <li><p><b>Ground Pork Ramen</b> $7.75</p></li></ul>
+  <p><b>36. Tantan Noodles*</b> $7.95
   <span class="sm">(Spicy sesame flavor, in a ground pork meat sauce)</span><br />
   <b>37. Mandarin Style Meat Sauce Noodle</b> $7.95 
   <span class="sm">(Ground pork meat sauce noodle)</span><br />
@@ -144,11 +144,11 @@ with assorted vegetables in a spicy garlic sauce</span><br />
   <p><b>42. Assorted Soup Noodles</b> $9.25<br />
   <b>43. Singapore Style Noodles (4)</b> $9.25 
   <span class="sm">(Rice thin noodle in a curry flavor sauce)</span><br />
-  <b>44. Yakisoba Stir Fried Noodles with Vegetable in Yakisoba Sauce</b><br />
-    <ul><li><b>Assorted or Shrimp</b>- $9.25</li>
-        <li><b>Chicken or Beef</b>- $8.95</li>
-        <li><b>Vegetable Yakisoba, or Vegetable Noodles</b>- $8.50</b></li></ul>
-  <b>45. House Fried Rice or Shrimp Fried Rice</b> $9.25<br />
+  <b>44. Yakisoba Stir Fried Noodles with Vegetable in Yakisoba Sauce</b></p>
+    <ul><li><p><b>Assorted or Shrimp</b>- $9.25</p></li>
+        <li><p><b>Chicken or Beef</b>- $8.95</p></li>
+        <li><p><b>Vegetable Yakisoba, or Vegetable Noodles</b>- $8.50</b></p></li></ul>
+  <p><b>45. House Fried Rice or Shrimp Fried Rice</b> $9.25<br />
   <b>46. Chicken or Beef Fried Rice</b> $8.95<br />
   <b>47. Rice Cake with Pork</b> $9.25</p>
 </div>
