--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <span class="sm">Deep fried crispy, sauteed with fresh jalapeno and green onion</span><br />
   <b>22. Seafood Clay Pot</b> $12.95 
     <span class="sm">Shrimp,fish filet,and calamari with assorted vegetables in an oyster sauce</span><br />
-  <b>23. Kon Pao San Yan*</b> $12.25<br />
+  <b>23. Kon Pao San Yan*</b> $12.25
   <span class="sm">Shrimp, white meat chicken and beef in a spicy sauce with peanuts</span><br />
   <b>24. Honey Walnuts Shrimp</b> $12.25 
   <span class="sm">Tender shrimp fried in a light battet sauteed in a creamy seafood sauce and crunchy honey walnuts</span><br />
