--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <b>25. Red Moon Chicken*</b> $9.75 
   <span class="sm">Slices of white meat chicken sauteed with vegetables in a spicy brown sauce</span><br />
   <b>26. Red Moon Beef*</b> $9.95 
-   <span class="sm">Slices of crispy beef sauteed with tangerine peel in the chef's special sauce</span><br /><br />
+   <span class="sm">Slices of crispy beef sauteed with tangerine peel in the chef's special sauce</span><br />
   <b>27. Crispy Garlic Chicken*</b> $9.75 
   <span class="sm">White meat chicken fried in a light batter served
 with assorted vegetables in a spicy garlic sauce</span><br />
